--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 		<img src="img/weather/texture-rain-bg.png" />
 		<img src="img/weather/texture-sun-fg.png" />
 		<img src="img/weather/texture-sun-bg.png" />
-		<img src="img/weather/texture-fallout-fg.png" />
-		<img src="img/weather/texture-fallout-bg.png" />
+		<img src="https://n.sinaimg.cn/tech/transform/777/w500h277/20190719/2a47-iaantfh2844529.gif" />
+		<img src="https://n.sinaimg.cn/tech/transform/777/w500h277/20190719/2a47-iaantfh2844529.gif" />
 		<img src="img/weather/texture-drizzle-fg.png" />
 		<img src="img/weather/texture-drizzle-bg.png" />
 	</div>
